[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/assets/sprites/UI/MainMenus/Buttons/QUIT/Timeline 1_0000.png" type="Texture2D" id=1]
[ext_resource path="res://game/menus/characterselect/CharacterCursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/menus/rematchmenu/RematchControl.gd" type="Script" id=3]
[ext_resource path="res://game/assets/sprites/UI/MainMenus/Buttons/REMATCH/Timeline 1_0000.png" type="Texture2D" id=4]
[ext_resource path="res://game/assets/sprites/UI/MainMenus/Buttons/NEWTEAM/Timeline 1_0000.png" type="Texture2D" id=5]

[node name="RematchControl" type="Node2D"]
position = Vector2( 1599, 735 )
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RemainingTime" type="Label" parent="CanvasLayer"]
offset_left = 1375.0
offset_top = 632.0
offset_right = 1415.0
offset_bottom = 646.0
scale = Vector2( 3, 3 )
text = "5"

[node name="Rematch" type="Sprite2D" parent="."]
texture = ExtResource( 4 )

[node name="CharacterSelect" type="Sprite2D" parent="."]
position = Vector2( 0, 85 )
texture = ExtResource( 5 )

[node name="BackToMainMenu" type="Sprite2D" parent="."]
position = Vector2( 0, 170 )
texture = ExtResource( 1 )

[node name="P1Cursor" parent="." instance=ExtResource( 2 )]
position = Vector2( -169, -5 )
scale = Vector2( 0.855091, 0.438989 )
is_p1 = true
portraitOffset = Vector2( 120, 85 )
gridY = 3
gridX = 1
deselect_ok = false

[node name="P2Cursor" parent="." instance=ExtResource( 2 )]
position = Vector2( 185, -5 )
scale = Vector2( 0.855, 0.439 )
input_prefix = "player2_"
portraitOffset = Vector2( 120, 82 )
gridY = 3
gridX = 1
deselect_ok = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
